Implement site styling using css. Fixes #51

--- a/web-development/projects/onlits-schools/about-us.html
+++ b/web-development/projects/onlits-schools/about-us.html
@@ -4,35 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Onlits Schools</title>
+    <title>Onlits Schools - About Us</title>
+    <link rel="stylesheet" href="site.css">
 </head>
 
-<body topmargin="0" leftmargin="0">
-    <table cellspacing="0" width="100%">
-        <tr>
-            <td align="center" colspan="2" bgcolor="orange">
-                <h1>Onlits Schools - About Us</h1>
-            </td>
-        </tr>
-        <tr>
-            <td width="20%">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li>About Us</li>
-                    <li><a href="academics.html">Academics</a></li>
-                    <li><a href="activities.html">Activities</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
-                </ul>
-            </td>
-            <td>
-                <h3>About Us</h3>
-                <p>Onlits Schools is a part of prestegious Onlits Foundation. We know Onlits Foundation has been dedicated towards the service of society since 2001.</p>
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2" align="center" bgcolor="gray"><font color="white"><i>&copy; 2024, Onlits Schools</i></font></td>
-        </tr>
-    </table>
+<body>
+    <header>
+        <h1>Onlits Schools</h1>
+    </header>
+
+    <main>
+        <aside>
+            <ul id="sidenav">
+                <li><a href="index.html">Home</a></li>
+                <li>About Us</li>
+                <li><a href="academics.html">Academics</a></li>
+                <li><a href="activities.html">Activities</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+            </ul>
+        </aside>
+        <div class="main">
+            <h3>About School</h3>
+        <p></p>
+        </div>
+        
+    </main>
+
+    <footer>
+        &copy; 2024, Onlits Schools
+    </footer>
 </body>
 
 </html>
