--- a/web-development/projects/onlits-schools/index.html
+++ b/web-development/projects/onlits-schools/index.html
@@ -5,34 +5,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Onlits Schools</title>
+    <link rel="stylesheet" href="site.css">
 </head>
 
-<body topmargin="0" leftmargin="0">
-    <table cellspacing="0" width="100%">
-        <tr>
-            <td align="center" colspan="2" bgcolor="orange">
-                <h1>Onlits Schools</h1>
-            </td>
-        </tr>
-        <tr>
-            <td width="20%">
-                <ul>
-                    <li>Home</li>
-                    <li><a href="about-us.html">About Us</a></li>
-                    <li><a href="academics.html">Academics</a></li>
-                    <li><a href="activities.html">Activities</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
-                </ul>
-            </td>
-            <td>
-                <h3>Principal's Message</h3>
-                <p></p>
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2" align="center" bgcolor="gray"><font color="white"><i>&copy; 2024, Onlits Schools</i></font></td>
-        </tr>
-    </table>
+<body>
+    <header>
+        <h1>Onlits Schools</h1>
+    </header>
+
+    <main>
+        <aside>
+            <ul id="sidenav">
+                <li>Home</li>
+                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="academics.html">Academics</a></li>
+                <li><a href="activities.html">Activities</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+            </ul>
+        </aside>
+        <div class="main">
+            <h3>Principal's Message</h3>
+        <p></p>
+        </div>
+        
+    </main>
+
+    <footer>
+        &copy; 2024, Onlits Schools
+    </footer>
 </body>
 
 </html>
