Work on add book module Fixes #66

--- a/web-development/projects/lms/index.html
+++ b/web-development/projects/lms/index.html
@@ -17,7 +17,7 @@
             <div
                 style="margin: 20px; background-color:lightgray; padding: 50px;text-align: center; border-radius: 10px; height: 500px;">
                 <h1>Sign in</h1>
-                <form action="user-authentication.php" method="post">
+                <form action="user-authentication.php" method="post" id="sign-in">
                     <label for="user-id">Email</label>
                     <input type="email" name="email" id="email">
                     <label for="password">Password</label>
