--- a/web-development/projects/lms/sign-up.html
+++ b/web-development/projects/lms/sign-up.html
@@ -9,7 +9,7 @@
 <body>
     <div style="text-align: center;">
         <h1>Create your account!</h1>
-        <form action="new-user.php" method="post">
+        <form action="new-user.php" method="post" id="sign-up">
             <label for="email">Email</label>
             <input type="email" name="email" id="email">
             <label for="password">Password</label>
