--- a/web-development/projects/onlits-schools/about-us.html
+++ b/web-development/projects/onlits-schools/about-us.html
@@ -5,12 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Onlits Schools - About Us</title>
+    <style>
+        header {
+            background-color: purple;
+        }
+    </style>
     <link rel="stylesheet" href="site.css">
 </head>
 
 <body>
-    <header>
+    <header style="background-color: gray;">
         <h1>Onlits Schools</h1>
+    </header>
+
+    <header>
+        <h1>Test Header</h1>
     </header>
 
     <main>
@@ -25,9 +34,9 @@
         </aside>
         <div class="main">
             <h3>About School</h3>
-        <p></p>
+            <p></p>
         </div>
-        
+
     </main>
 
     <footer>
