--- a/web-development/projects/onlits-schools/index.html
+++ b/web-development/projects/onlits-schools/index.html
@@ -15,19 +15,17 @@
 
     <main>
         <aside>
-            <ul id="sidenav">
-                <li>Home</li>
-                <li><a href="about-us.html">About Us</a></li>
-                <li><a href="academics.html">Academics</a></li>
-                <li><a href="activities.html">Activities</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-            </ul>
+            <a class="active"> Home </a>
+            <a href="about-us.html">About Us</a>
+            <a href="academics.html">Academics</a>
+            <a href="activities.html">Activities</a>
+            <a href="gallery.html">Gallery</a>
         </aside>
         <div class="main">
             <h3>Principal's Message</h3>
-        <p></p>
+            <p></p>
         </div>
-        
+
     </main>
 
     <footer>
