--- a/web-development/css/dashboard.html
+++ b/web-development/css/dashboard.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="dashboard-style.css">
 </head>
+
 <body>
     <header>
         <h1>Dashboard Example</h1>
@@ -17,5 +19,44 @@
             <a href="">Option 5</a>
         </nav>
     </header>
+    <main>
+        <div class="card-container-1">
+            <div class="card-1">
+                <div class="card-1-title">
+                    Annual Sales
+                </div>
+                <div class="card-1-content">
+                    &#8377; 2,00,00,000.00
+                </div>
+            </div>
+            <div class="card-1">
+                <div class="card-1-title">
+                    Annual Profit
+                </div>
+                <div class="card-1-content">
+                    &#8377; 78,00,000.00
+                </div>
+            </div>
+        </div>
+        <div class="card-container-chart">
+            <div class="card-chart">
+                <div class="card-1-title">
+                    Annual Sales
+                </div>
+                <div class="card-chart-content">
+                    
+                </div>
+            </div>
+            <div class="card-chart">
+                <div class="card-chart-title">
+                    Annual Profit
+                </div>
+                <div class="card-chart-content">
+                    
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
